--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-rate-limit": "^6.6.0",
     "nodemailer": "^6.8.0"
   },
   "devDependencies": {
